Pablo Lasota/.metadata/.plugins/org.eclipse.cdt.ui/Clase_07.build.log
18:42:58 **** Build of configuration Debug for project Clase_07 ****
make all 
Building file: ../src/Clase_07.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Clase_07.d" -MT"src/Clase_07.o" -o "src/Clase_07.o" "../src/Clase_07.c"
../src/Clase_07.c: In function ‘ordenaArrayString’:
../src/Clase_07.c:296:11: error: assignment to expression with array type
       aux = array[j];
           ^
../src/Clase_07.c:297:16: error: assignment to expression with array type
       array[j] = array[j+1];
                ^
../src/Clase_07.c:298:15: error: assignment to expression with array type
       array[j]=aux;
               ^
make: *** [src/Clase_07.o] Error 1
src/subdir.mk:18: fallo en las instrucciones para el objetivo 'src/Clase_07.o'
"make all" terminated with exit code 2. Build might be incomplete.

18:42:59 Build Failed. 5 errors, 0 warnings. (took 942ms)

